<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="today.duma.vigenere.MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@drawable/btn_style"
            android:button="@android:color/transparent"
            android:text="@string/simpleText"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@drawable/btn_style"
            android:button="@android:color/transparent"
            android:text="@string/standardText"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/ascii"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@drawable/btn_style"
            android:button="@android:color/transparent"
            android:text="@string/asciiText"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:id="@+id/messageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/messageText" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageLabel"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scrollHorizontally="false"
        android:inputType="textMultiLine"
        android:maxLines="5" />

    <TextView
        android:id="@+id/keyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/keyText" />

    <EditText
        android:id="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyLabel"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scrollHorizontally="false"
        android:inputType="textMultiLine"
        android:maxLines="5" />

    <Button
        android:id="@+id/key_gen"
        android:onClick="key_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/key"
        android:layout_marginRight="16dp"
        android:text="@string/keyGenText" />

    <Button
        android:id="@+id/decrypt"
        android:onClick="decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/key_gen"
        android:layout_toStartOf="@id/key_gen"
        android:layout_toLeftOf="@id/key_gen"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/decryptText"	/>

    <Button
        android:id="@+id/encrypt"
        android:onClick="encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/decrypt"
        android:layout_toStartOf="@id/decrypt"
        android:layout_toLeftOf="@id/decrypt"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/encryptText"	/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:onClick="fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_add_white_24dp" />

</RelativeLayout>
